# option-pricing

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
note/: main.tex  references.bib
scripts/: _style.py  benchmark_runtimes.py  fit_european_rates.py  generate_american_convergence.py  generate_convergence_three_schemes.py  generate_crr_oscillation_regimes.py  generate_crr_vs_lr_convergence.py  generate_social_preview.py  generate_tian_alignment_loses.py  generate_tian_alignment_wins.py  generate_tian_envelope_crossings.py  generate_tian_extrapolation.py  generate_tian_regime_analysis.py  generate_tian_rolling_winrate.py  generate_tian_smoothness.py
src/option_pricing/: __init__.py  black_scholes.py  calibration.py  parameterizations.py  peizer_pratt.py  pricers.py
tests/: test_black_scholes.py  test_calibration.py  test_parameterizations.py  test_pricers.py
