[project]
name = "option-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Davila", email = "daviddavilacorraliza@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]

[project.scripts]
option-pricing = "option_pricing:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
